Fix alignments - Landing Text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39857,7 +39857,7 @@ div.tagsinput span.tag a {
   font-size: 1.2em;
   min-width: 120px;
   letter-spacing: 3px;
-  line-height: 20px;
+  line-height: 18px;
 }
 
 @media (max-width: 767px) {
